--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,17 @@ h1 {
   color: navy;
   text-align: center;
 }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  text-align: center;
+}
+th, td {
+  padding: 10px;
+  border: 1px solid #ccc;
+  text-align: center;
+  vertical-align: middle;
+}
 
 label {
   width: 10em;
