--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
 
 body {    
   font-family: Arial, sans-serif;
@@ -24,18 +21,18 @@ body {
   color: #333;
 }
 
-.contact-image {
+.book-image {
   max-width: 100%;
   height: auto;
   border-radius: 8px;
   margin-bottom: 20px;
 }
 
-.contact-info {
+.book-info {
   text-align: left;
 }
 
-.contact-info p {
+.book-info p {
   margin: 8px 0;
   font-size: 16px;
   color: #444;
@@ -99,7 +96,7 @@ label {
   padding: .25em;
 }
 
-#button input {
+#buttons input {
   float: left;
   margin-bottom: .5em;
 }
